# test_githubactions

./: CMakeLists.txt  CNAME  eda1  gutaguta.c  main.c  test_verifiled.txt
.github/workflows/: clang-formatter.yml  reviewdog.yml  tagging  tagging.yml
